  encoding now always contains an encoding name.

- Issue #17644: Fix a crash in str.format when curly braces are used in square
  brackets.

- Issue #17983: Raise a SyntaxError for a ``global __class__`` statement in a
  class body.

- Issue #17927: Frame objects kept arguments alive if they had been copied into
  a cell, even if the cell was cleared.

Library
-------

- Issue #19137: The pprint module now correctly formats instances of set and
  frozenset subclasses.

- Issue #19092: contextlib.ExitStack now correctly reraises exceptions
  from the __exit__ callbacks of inner context managers (Patch by Hrvoje
  Nikšić)

- Issue #12641: Avoid passing "-mno-cygwin" to the mingw32 compiler, except
  when necessary.  Patch by Oscar Benjamin.

- Issue #18594: The fast path for collections.Counter() was never taken
  due to an over-restrictive type check.  And the fallback path did
  not implement the same algorithm as the pure python code.

- Properly initialize all fields of a SSL object after allocation.

- Issue #4366: Fix building extensions on all platforms when --enable-shared
  is used.

- Issue #18950: Fix miscellaneous bugs in the sunau module.
  Au_read.readframes() now updates current file position and reads correct
  number of frames from multichannel stream.  Au_write.writeframesraw() now
  correctly updates current file position.  Au_read.getnframes() now returns an
  integer (as in Python 2).  Au_read and Au_write now correctly works with file
  object if start file position is not a zero.

- Issue #19053: ZipExtFile.read1() with non-zero argument no more returns empty
  bytes until end of data.

- Issue #19028: Fixed tkinter.Tkapp.merge() for non-string arguments.

- Issue #3015: Fixed tkinter with wantobject=False.  Any Tcl command call
  returned empty string.

- Issue #18050: Fixed an incompatibility of the re module with Python 3.3.0
  binaries.

- Issue #19037: The mailbox module now makes all changes to maildir files